# src/main/openapi/PipelinePowerToolCalculatorAPI.yml
@@ -60,38 +60,27 @@ components:
         type: string
       description: The country code where the pipeline is hosted
       example: NL
-    price:
-      in: query
-      name: price
-      schema:
-        type: number
-        format: float
-      description: The price per kWh
-      example: 0.42
   schemas:
     PowerUsageResponse:
       type: object
       properties:
-        powerUsageKwh:
+        kwhTotal:
           description: Power Usage in Kilowatt-hour
           type: string
-        co2ProducedTotalGr:
+        co2Total:
           description: Total CO2 Produced in grams
           type: string
-        priceTotal:
-          description: Cost of pipeline up until now
+        kwhPerRun:
+          description: Power Usage per pipeline run in Kilowatt-hour
           type: string
-        co2ProducingPerRunGr:
+        co2PerRun:
           description: CO2 Produced per run in grams
           type: string
-        pricePerRun:
-          description: Cost of pipeline per run
+        kwhPerHour:
+          description: Power Usage per hour in Kilowatt-hour
           type: string
-        co2ProducingPerHourGr:
+        co2PerHour:
           description: CO2 Produced per hour in grams
-          type: string
-        pricePerHour:
-          description: Cost of pipeline per hour
           type: string
         cpuUtilization:
           description: Average CPU Utilization
@@ -99,6 +88,6 @@ components:
         pipelineRuns:
           description: Amount of pipeline runs
           type: string
-        runtimeSeconds:
+        runtime:
           description: Runtime of selected pipeline(s) in seconds
           type: string
